[gd_scene load_steps=2 format=3 uid="uid://dpjtccvxo1tum"]

[ext_resource type="Script" path="res://Scenes/UI/victory_ui.gd" id="1_0j63b"]

[node name="VictoryUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -500.0
offset_right = -800.0
offset_bottom = -500.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0j63b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -695.0
offset_top = -280.5
offset_right = 695.0
offset_bottom = 280.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.207843, 0.207843, 0.54902)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -128.0
offset_right = 96.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = 175.0
offset_right = 143.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Return to Map"

[node name="HealthUpgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 58.0
offset_right = 156.0
offset_bottom = 89.0
text = "Health Boost"

[node name="DamageUpgrade" type="Button" parent="."]
layout_mode = 0
offset_left = -155.0
offset_top = 56.0
offset_right = -12.0
offset_bottom = 87.0
text = "Damage Upgrade"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -142.0
offset_top = -33.0
offset_right = 159.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 32
text = "Choose an Upgrade"
horizontal_alignment = 2
vertical_alignment = 3

[node name="NuhUhTimer" type="Timer" parent="."]

[node name="Nuhuh" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -371.0
offset_top = -55.0
offset_right = -120.0
offset_bottom = -32.0
scale = Vector2(2.90934, 2.90934)
text = "PICK AN UPGRADE YOU GOOBER"

[node name="ColorRect" type="ColorRect" parent="Nuhuh"]
visible = false
show_behind_parent = true
layout_mode = 0
offset_left = -4.0
offset_top = -7.0
offset_right = 255.0
offset_bottom = 33.0
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HealthUpgrade" to="." method="_on_health_upgrade_pressed"]
[connection signal="pressed" from="DamageUpgrade" to="." method="_on_damage_upgrade_pressed"]
[connection signal="timeout" from="NuhUhTimer" to="." method="_on_nuh_uh_timer_timeout"]
